--- a/app/src/main/assets/myhtml.html
+++ b/app/src/main/assets/myhtml.html
@@ -37,8 +37,8 @@
         </svg>
 
     </div>
+    <a id="btn" class="btn btn-1 btn-1e">Тиц</a>
 </div>
-
 </body>
 <script src="test.js"></script>
 </html>
