--- a/app/src/main/assets/myhtml.html
+++ b/app/src/main/assets/myhtml.html
@@ -37,7 +37,7 @@
         </svg>
 
     </div>
-    <a id="btn" class="btn btn-1 btn-1e">Тиц</a>
+    <button id="btn" class="btn btn-1 btn-1e">Тиц</button> 
 </div>
 </body>
 <script src="test.js"></script>
