--- a/app/src/main/assets/myhtml.html
+++ b/app/src/main/assets/myhtml.html
@@ -1,6 +1,6 @@
 <!doctype html>
-<html lang="en">
-<head>
+<html lang="en" touchstart="btnElem.classList.add('btn-2e');">
+<head >
     <meta charset="UTF-8">
     <title>Document</title>
 
